CSCEXAM-1195 Change some dropdowns to typeaheads with reservation searchy - also refactor the admin/teacher reservation components into one